--- a/KTW_Homework/GameEngineMap/GameEngineMap.vcxproj
+++ b/KTW_Homework/GameEngineMap/GameEngineMap.vcxproj
@@ -144,6 +144,11 @@
   <ItemGroup>
     <ClInclude Include="GameEngineMap.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GameEngineBase\GameEngineBase.vcxproj">
+      <Project>{15d1f0d8-c87b-470f-aad6-485591a04d56}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
