--- a/KTW_Homework/070_Assert/070_Assert.vcxproj.filters
+++ b/KTW_Homework/070_Assert/070_Assert.vcxproj.filters
@@ -2,5 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="070_Assert.cpp" />
+    <ClCompile Include="Player.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="BaseHeader.h" />
   </ItemGroup>
 </Project>
