--- a/KTW_Homework/083_TemplateEx/083_TemplateEx.vcxproj
+++ b/KTW_Homework/083_TemplateEx/083_TemplateEx.vcxproj
@@ -128,6 +128,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="083_TemplateEx.cpp" />
+    <ClCompile Include="Temp.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Temp.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
